--- a/style.css
+++ b/style.css
@@ -2,12 +2,43 @@
     min-width: 475px;
 } */
 :root {
-    --primarycolor: #d90dfd;
+    --primarycolor: #e346ff;
     --secondarycolor: #56c6ff;
 }
+
+@keyframes slideInLeft {
+    from {
+        position: relative;
+        left: -100%;
+        overflow: hidden;
+    }
+    to {
+        position: relative;
+        left: 0%;
+        overflow: hidden;
+    }
+}
+
+@keyframes slideInRight {
+    from {
+        
+        right: -100%;
+        overflow: hidden;
+    }
+    to {
+        
+        
+        overflow: hidden;
+    }
+}
+
 * {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#body {
+    position: absolute;
 }
 
 .primary-text-color {
@@ -16,6 +47,13 @@
 
 #bio {
     font-size: 1.1rem;
+    animation-duration: 0.75s;
+    animation-name: slideInLeft;
+}
+
+#contact {
+    animation-duration: 0.75s;
+    animation-name: slideInRight;
 }
 
 #content {
@@ -24,6 +62,7 @@
 
 nav {
     background-color: var(--primarycolor);
+    z-index: 1;
 }
 
 nav button {
@@ -74,6 +113,10 @@ nav h1 {
 
 div a h1 {
     font-size: 1.5rem;
+}
+
+.projects-github-link {
+    text-align: center;
 }
 
 #bio,
